--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2 class="title">About</h2>
                 <div class="about-area">
                     <div class="about-area-img">
-                        <img src="/img/スクリーンショット 2021-04-29 22.56.54.png" alt="">
+                        <img src="img/スクリーンショット 2021-04-29 22.56.54.png" alt="">
                     </div>
                     <div class="about-area-decription">
                     <div class="about-area-decription-text text">
